<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inforgest</string>
    <string name="app_description">
        IgestMobile is a sales management system, designed for android,
        with the aim of eliminating the need to be in the company to have access to business information.
    </string>
    <string name="dbl_url">www.database.co.mz</string>
    <string name="welcome">Welcome</string>
    <string name="igest_welcome">Welcome to InforGest</string>
    <string name="designed_by">Designed By Banucho Cassamo</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">System</string>
    <string name="title_section3">Archive</string>
    <string name="title_section4">Client</string>
    <string name="title_section5">Suppliers</string>
    <string name="title_section6">Products</string>
    <string name="title_section7">Treasury</string>
    <string name="title_section8">Technical assistence</string>
    <string name="title_section9">Listings</string>
    <string name="title_section10">About</string>

    <!-- Navigation Titles -->
    <string name="action_new">New</string>
    <string name="action_name">Name</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Hints -->
    <string name="write_a_product_type">Write a product Type name</string>
    <string name="write_a_product_group">Write a product Group name</string>
    <string name="write_a_product_family">Write a product Family name</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="not_implemented">View Not Implemented</string>

    <string-array name="nav_drawer_menu">
        <item>Home</item>
        <!--<item>System</item>
        <item>Archive</item>-->
        <item>Client</item>
        <!--<item>Suppliers</item>-->
        <item>Products</item>
        <item>Treasury</item>
        <!--<item>Technical assistence</item>
        <item>Listings</item>-->
        <item>About</item>
        <item>LogOut</item>
    </string-array>

    <!-- Archive tab titles -->
    <string-array name="archive_tab_titles">
        <item>Product Parametrization</item>
        <item>Entitys</item>
        <item>Documents</item>
        <item>Other Configuration</item>
    </string-array>

    <!-- Client tab titles -->
    <string-array name="client_tab_titles">
        <item>Files and Customers</item>
        <item>Documents</item>
        <item>Baskets</item>
    </string-array>


    <!-- For another layout -->
    <string name="files_customers">Files and Customers</string>
    <string name="documents">Documents</string>
    <string name="baskets">Baskets</string>


    <!-- Listings tab titles -->
    <string-array name="listings_tab_titles">
        <item>Customers</item>
        <item>Suppliers</item>
        <item>Products</item>
        <item>Treasury</item>
        <item>Other</item>
    </string-array>

    <!-- Product tab titles -->
    <string-array name="product_tab_titles">
        <item>Files and Products</item>
        <item>Acerto de Stock</item>
        <item>Inventory</item>
        <item>Other</item>
    </string-array>

    <string name="files_products">Files and Products</string>
    <string name="acerto_stock">Stock Settlement</string>
    <string name="inventory">Inventory</string>
    <string name="other">Other</string>

    <!-- Supplier tab titles -->
    <string-array name="supplier_tab_titles">
        <item>Files and Supplier</item>
        <item>Documents</item>
        <item>Orders</item>
    </string-array>

    <!-- Archieve Butons Menu -->
    <!-- Paramentrization Buttons -->
    <string name="btnFamily">Family</string>
    <string name="btnGroups">Groups</string>
    <string name="btnTypOfProd">  Type of Products  </string>
    <string name="btnCurUnit">    Currency Unit   </string>
    <string name="title_activity_group_form">Product Groups</string>
    <string name="title_activity_currency_unit">Currency</string>

    <!-- Entity Buttons -->
    <string name="btnWareHouse">WareHouse</string>
    <string name="btnSellers">Sellers</string>
    <string name="btnTypeOfClient">Type Of Client</string>
    <string name="btnCurrency">Currency</string>
    <string name="btnExchange">Exchange</string>
    <string name="btnBank">Bank</string>

    <!-- Document Buttons -->
    <string name="btnDocumentTypes">Document Types</string>
    <string name="btnPaymentMethods">Payment Methods</string>
    <string name="btnPaymentTerms">Payment Terms</string>

    <!-- Customer Buttons Menu -->
    <!-- Customer File Buttons -->
    <string name="btnCustomers">Customers</string>
    <string name="btnCurAccount">Current Accounts</string>

    <!-- Baskets Buttons -->
    <string name="btnBaskets">Baskets</string>
    <string name="btnSpent">Spent</string>
    <string name="btnFidelityCard">Fidelity Card</string>

    <!-- Customer Documents Buttons -->
    <string name="btnProForm">Pro-Form</string>
    <string name="btnInvoice">Invoice</string>
    <string name="btnCashSale">Cash Sale</string>
    <string name="btnCustSearch">Search</string>
    <string name="btnDelGuides">Delivery Guides</string>
    <string name="btnDebitNote">Debit Note</string>

    <!-- Product Buttons Menu -->
    <!-- Product Files Buttons -->
    <string name="btnProduct">Products</string>
    <string name="btnProdPrices">Prices</string>
    <string name="btnProdExist">Existences</string>
    <string name="btnExtraProd">Extract Products</string>
    <string name="btnConfWhereHouse">Confi. em Armazens</string>

    <!-- Product Inventory Buttons -->
    <string name="btnProdInventory">Inventory</string>
    <string name="btnProdSearchinventory">Search Inventory</string>

    <!-- Product Settlement Stock -->
    <string name="btnProdSetStock">Settlement Stock</string>
    <string name="btnProdsearchSettl">Search Settlement</string>

    <!-- Supplier Buttons Menu -->
    <!-- Supplier Files Buttons -->
    <string name="btnSupplier">Supplier</string>
    <string name="btnSupplierCurAccount">Current Accounts</string>

    <!-- Supplier Orders Buttons -->
    <string name="btnOrderToSupplier">Order To Supplier</string>

    <!-- Supplier Documents Buttons -->
    <string name="btnEntInStock">Entry into Stock</string>
    <string name="btnSuppSearch">Search</string>
    <string name="title_activity_family_product_list">FamilyProductListActivity</string>
    <string name="title_activity_new_product_family">NewProductFamilyActivity</string>
    <string name="title_activity_group_product_list">GroupProductListActivity</string>
    <string name="title_activity_new_product_group">NewProductGroupActivity</string>
    <string name="title_activity_type_product_list">TypeProductListActivity</string>
    <string name="title_activity_new_product_type">NewProductTypeActivity</string>
    <string name="title_activity_client_list">Customer List</string>
    <string name="title_activity_client_details">Client Details</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="title_activity_payment_balance">Emission of Receipt</string>
    <string name="btnPay">Pay</string>

    <!-- System Messages -->
    <string name="error_message">Error loading</string>
    <string name="load_start">Loading Please Wait...</string>
    <string name="load_complete">Loading Completed</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="Prices">Prices</string>
    <string name="txt_price">Price</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="desig">Description</string>
    <string name="cod">Code</string>
    <string name="upc">U.P.C:</string>
    <string name="pmc">P.M.C:</string>
    <string name="pmv">P.M.V:</string>
    <string name="p2">P2:</string>
    <string name="p3">P3:</string>
    <string name="p4">P4:</string>
    <string name="spec">Specifications:</string>
    <string name="text_balance">Balance</string>
    <string name="action_code">Code</string>
    <string name="action_desig">Designation</string>
    <string name="action_specification">Specification</string>
    <string name="action_document_number">Doc Number</string>
    <string name="action_document_date">Date</string>
    <string name="action_document_total_value">Total Value</string>
    <string name="action_document_payed">Payed Value</string>
    <string name="action_document_topay">To Pay</string>
    <string name="txt_iva">IVA</string>
    <string name="txt_total">Total</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_box_unity">Unity/Box</string>
    <string name="receipts">Receipts</string>
    <string name="btnIssueReceipts">Issue Receipts</string>
    <string name="title_activity_pendent_customer_list">Customers With Outstanding Balance</string>


</resources>
